--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="United Hanger is a leading
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/public/eaa6058f-3d23-4e4e-82e6-709309ea03d0.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="United Hanger is a leading
     company specializing in the design and manufacturing of high-quality hangers
     that cater to diverse customer needs. We are committed to providing
     innovative and thoughtfully designed products that help organize clothing in
@@ -16,12 +16,12 @@
     United Hanger, we believe that organization doesn't have to be boring; it
     can be a part of a stylish experience in every home.Enjoy a tidier and more
     organized space with United Hanger!" />
-    <title>United Hanger</title>
-</head>
+        <title>United Hanger</title>
+    </head>
 
-<body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-</body>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 
 </html>
